fix: update images styles on emplees section and updated mobile gap on testimonials section

--- a/css/index-style.css
+++ b/css/index-style.css
@@ -374,16 +374,12 @@ background-color: rgba(0, 33, 66, 0.55);
 
 .rounded-img {
 	width: 100%;
-    	border-radius: 0px;
-	margin-top: 20px;
+	height: auto;
+  border-radius: 10px;
+	object-fit: cover;
+	margin-bottom: 20px;
 }
 
-.background-image {
-	background-size: cover;
-	background-position: center;
-	min-height: 400px;
-  border-radius: 15px;
-}
 .text-padding {
 	padding-inline: 3rem;
 }
@@ -512,11 +508,11 @@ background-color: rgba(0, 33, 66, 0.55);
 .bg-light {
 	background-color: #f8f9fa;
 }
-.rounded-img {
+/* .rounded-img {
     	border-radius: 0rem;
 	width: 100%;
 	height: auto;
-}
+} */
 .carousel-item {
 	margin-top: 20px;
 	margin-bottom: 20px;
@@ -536,12 +532,12 @@ background-color: rgba(0, 33, 66, 0.55);
 #simpleCarousel .carousel-item .col-md-6 {
 	padding: 20px;
 }
-.rounded-img {
+/* .rounded-img {
     	border-radius: 0;
 	width: 100%;
 	max-width: 100%;
 	height: auto;
-}
+} */
 .video-container {
 	position: relative;
 	margin-block-end: 2.5rem;
@@ -647,6 +643,7 @@ background-color: rgba(0, 33, 66, 0.55);
 @media (max-width: 768px) {
 	.quote-inner {
 			flex-direction: column;
+			gap: 2.5rem;
 	}
 	.quote-icon {
 		max-width: 10rem;
